--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.10",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "npm": "^11.5.2",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.10"
   },
